--- a/Math.html
+++ b/Math.html
@@ -1,89 +1,113 @@
-let num1, num2, operator, value,currentvalue,lastnumber,aye;
-
-function generate(numbr) {
-  const answer = numbr;
-  value = parseFloat(answer);
-
-  if (isNaN(value)) {
-    alert('Please enter a valid number');
-    return;
-  }
-
-  const operators = ['+', '-', '*', '/'];
-  operator = operators[Math.floor(Math.random() * operators.length)];
-
-  if (operator === '+') {
-    num1 = Math.floor(Math.random() * value);
-    num2 = value - num1;
-  } else if (operator === '-') {
-    num1 = value + Math.floor(Math.random() * value);
-    num2 = num1 - value;
-  } else if (operator === '*') {
-    num1 = Math.floor(Math.random() * Math.sqrt(value));
-    num2 = value / num1;
-    if (num2 === 0 || !isFinite(num2) || !isFinite(num1)) {
-      generateQuestion();
-      return;
-    }
-  } else if (operator === '/') {
-    num1 = value * Math.floor(Math.random() * 10 + 1); // Ensure num1 is not zero
-    num2 = num1 / value;
-    if (num2 === 0 || !isFinite(num2) || !isFinite(num1)) {
-      generateQuestion();
-      return;
-    }
-  }
-
-  let question = '';
-
-  if (operator === '+') {
-    question = `${num1} + ${num2}`;
-  } else if (operator === '-') {
-    question = `${num1} - ${num2}`;
-  } else if (operator === '*') {
-    question = `${num1} * ${num2}`;
-  } else if (operator === '/') {
-    question = `${num1} / ${num2}`;
-  }
-   return question
-}
-
-function generateQuestion() {
-  let question,diff;
-  diff = document.getElementById("hard")
-  if (diff.value == 1){ 
-    while (!question || question.includes("undefined")) {
-      const mutiplier = Math.floor(Math.random() * 10 + 1);
-      const chance = Math.random();
-  
-      if (chance <= 0.1) { // 10% chance for each formula
-        currentvalue = generate(document.getElementById('answer').value * mutiplier);
-        lastnumber = document.getElementById('answer');
-        aye = generate(lastnumber.value * (mutiplier - 1));
-        question = `(${currentvalue}) - (${aye})`;
-      } else if (chance <= 0.2) { // Another 10% chance
-        currentvalue = generate(-document.getElementById('answer').value * (mutiplier - 1));
-        lastnumber = document.getElementById('answer');
-        aye = generate(lastnumber.value * mutiplier);
-        question = `(${currentvalue}) + (${aye})`;
-      } else if (chance <= 0.3) { // Another 10% chance
-        currentvalue = generate(document.getElementById('answer').value * mutiplier);
-        lastnumber = document.getElementById('answer');
-        aye = generate(lastnumber.value / mutiplier);
-        question = `(${currentvalue}) * (${aye})`;
-      }
-    }
-}else if(diff.value >= 2){
-  while (!question || question.includes("undefined")) {
-    const mutiplier = Math.floor(Math.random() * 10 + 1);
-    const chance = Math.random();
-      currentvalue = generate(document.getElementById('answer').value * mutiplier);
-      lastnumber = document.getElementById('answer');
-      aye = generate(lastnumber.value * (mutiplier - 1));
-      aue = generate(lastnumber.value * mutiplier)
-      question = `(${aue} - ${currentvalue}) + (${aye})`;
-  }
-}
-  document.getElementById('formula').textContent = question;
-}
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meth Maker!!!</title>
+    <style>
+        body {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            color: yellow;
+        }
+        #formula {
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        #stuff {
+            color: yellow;
+            background-color: black;
+            text-align: center;
+            padding: 20px;
+            border: 2px solid yellow;
+            border-radius: 10px;
+            box-shadow: 0 0 15px yellow;
+        }
+        #stuff div {
+            text-align: center;
+        }
+        #answer {
+            padding: 10px;
+            border: 2px solid yellow;
+            background-color: black;
+            color: yellow;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            width: calc(100% - 44px); /* Full width minus padding and border */
+            box-sizing: border-box; /* Ensure padding and border are included in the width */
+        }
+        #answer::placeholder {
+            color: yellow;
+            opacity: 0.5;
+        }
+        #answer:focus {
+            outline: none;
+            border-color: orange;
+        }
+        #generate-button {
+            padding: 10px 20px;
+            border: none;
+            background-color: yellow;
+            color: black;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            border-radius: 5px;
+        }
+        #generate-button:hover {
+            background-color: orange;
+            transform: scale(1.1);
+        }
+        #generate-button:active {
+            transform: scale(0.9);
+        }
+        input[type="range"] {
+            -webkit-appearance: none;
+            width: 100%;
+            margin: 10px 0;
+            background-color: black;
+        }
+        input[type="range"]:focus {
+            outline: none;
+        }
+        input[type="range"]::-webkit-slider-runnable-track {
+            width: 100%;
+            height: 8.4px;
+            cursor: pointer;
+            background: yellow;
+            border-radius: 1.3px;
+        }
+        input[type="range"]::-webkit-slider-thumb {
+            border: 1px solid yellow;
+            height: 16px;
+            width: 16px;
+            border-radius: 3px;
+            background: orange;
+            cursor: pointer;
+            -webkit-appearance: none;
+            margin-top: -4px;
+        }
+        input[type="range"]:focus::-webkit-slider-runnable-track {
+            background: orange;
+        }
+    </style>
+</head>
+<body>
+    <div id="stuff">
+        <div>
+            <p>Math generator (waltur we have to cook)</p>
+            <input type="text" id="answer" placeholder="Enter first value">
+            Difficulty!!!: <input type="range" id="hard" min="1" max="3" value="1">
+            <button id="generate-button" onclick="generateQuestion()">Generate Formula</button>
+            <p id="formula"></p>
+        </div>
+    </div>
+    <script src="math.js"></script>
+    </script>
+</body>
+</html>
